// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QuizCreatorPageUI > renders QuizCreatorPageUI for classic mode 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <div
          class="quizCreatorPageHeader"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindSecondary small error"
            >
              <input
                class="textfield"
                data-testid="test-quiz-title-textfield-textfield"
                id="quiz-title-textfield"
                maxlength="95"
                minlength="3"
                name="quiz-title-textfield"
                placeholder="Title"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
          >
            <button
              data-testid="test-settings-button-button"
              id="settings-button"
              name="settings-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gear"
                data-icon="gear"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Settings
              </span>
            </button>
          </div>
          <div
            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
          >
            <button
              data-testid="test-save-button-button"
              disabled=""
              id="save-button"
              name="save-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-floppy-disk"
                data-icon="floppy-disk"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm32 96c0-17.7 14.3-32 32-32l160 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="quizCreatorPage"
          >
            <div
              class="questionPickerWrapper"
            >
              <div
                class="questionPickerItemContainer"
              >
                <div
                  class="questionPickerItemWrapper"
                  draggable="true"
                  id="question-picker-item-0"
                >
                  <button
                    class="questionPickerItemButton questionPickerItemActive"
                  >
                    <div
                      class="questionPickerItemText"
                    >
                      <span>
                        Who painted The Starry Night?
                      </span>
                    </div>
                    <div
                      class="questionPickerItemType"
                    >
                      Multi Choice
                    </div>
                  </button>
                  <div
                    class="questionPickerItemOverlay"
                  >
                    <div
                      class="questionPickerItemOverlayTop"
                    >
                      <div
                        class="questionPickerItemOverlayNumber questionPickerItemActive"
                      >
                        1
                      </div>
                    </div>
                    <div
                      class="questionPickerItemOverlayBottom"
                    >
                      <button
                        class="questionPickerItemOverlayDuplicate"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-copy"
                          data-icon="copy"
                          data-prefix="far"
                          role="img"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M384 336l-192 0c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l133.5 0c4.2 0 8.3 1.7 11.3 4.7l58.5 58.5c3 3 4.7 7.1 4.7 11.3L400 320c0 8.8-7.2 16-16 16zM192 384l192 0c35.3 0 64-28.7 64-64l0-197.5c0-17-6.7-33.3-18.7-45.3L370.7 18.7C358.7 6.7 342.5 0 325.5 0L192 0c-35.3 0-64 28.7-64 64l0 256c0 35.3 28.7 64 64 64zM64 128c-35.3 0-64 28.7-64 64L0 448c0 35.3 28.7 64 64 64l192 0c35.3 0 64-28.7 64-64l0-16-48 0 0 16c0 8.8-7.2 16-16 16L64 464c-8.8 0-16-7.2-16-16l0-256c0-8.8 7.2-16 16-16l16 0 0-48-16 0z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                      <button
                        class="questionPickerItemOverlayDelete"
                      >
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-trash"
                          data-icon="trash"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                            fill="currentColor"
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="questionPickerItemWrapper"
                  draggable="false"
                  id="question-picker-item-1"
                >
                  <button
                    class="questionPickerItemButton"
                  >
                    <div
                      class="questionPickerItemText"
                    >
                      <span>
                        What percentage of the earth's surface is covered by water?
                      </span>
                    </div>
                    <div
                      class="questionPickerItemType"
                    >
                      Range
                    </div>
                  </button>
                  <div
                    class="questionPickerItemOverlay"
                  >
                    <div
                      class="questionPickerItemOverlayTop"
                    >
                      <div
                        class="questionPickerItemOverlayNumber"
                      >
                        2
                      </div>
                    </div>
                    <div
                      class="questionPickerItemOverlayBottom"
                    />
                  </div>
                </div>
                <div
                  class="questionPickerItemWrapper"
                  draggable="false"
                  id="question-picker-item-2"
                >
                  <button
                    class="questionPickerItemButton"
                  >
                    <div
                      class="questionPickerItemText"
                    >
                      <span>
                        Rabbits can't vomit?
                      </span>
                    </div>
                    <div
                      class="questionPickerItemType"
                    >
                      True or False
                    </div>
                  </button>
                  <div
                    class="questionPickerItemOverlay"
                  >
                    <div
                      class="questionPickerItemOverlayTop"
                    >
                      <div
                        class="questionPickerItemOverlayNumber"
                      >
                        3
                      </div>
                    </div>
                    <div
                      class="questionPickerItemOverlayBottom"
                    />
                  </div>
                </div>
                <div
                  class="questionPickerItemWrapper"
                  draggable="false"
                  id="question-picker-item-3"
                >
                  <button
                    class="questionPickerItemButton"
                  >
                    <div
                      class="questionPickerItemText"
                    >
                      <span>
                        Who painted the Mono Lisa?
                      </span>
                    </div>
                    <div
                      class="questionPickerItemType"
                    >
                      Type Answer
                    </div>
                  </button>
                  <div
                    class="questionPickerItemOverlay"
                  >
                    <div
                      class="questionPickerItemOverlayTop"
                    >
                      <div
                        class="questionPickerItemOverlayNumber"
                      >
                        4
                      </div>
                    </div>
                    <div
                      class="questionPickerItemOverlayBottom"
                    />
                  </div>
                </div>
              </div>
              <div
                class="addQuestionButtonWrapper"
              >
                <button
                  class="addQuestionButton"
                >
                  <svg
                    aria-hidden="true"
                    class="svg-inline--fa fa-circle-plus fa-width-auto"
                    data-icon="circle-plus"
                    data-prefix="fas"
                    role="img"
                    viewBox="0 0 512 512"
                  >
                    <path
                      d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM232 344l0-64-64 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l64 0 0-64c0-13.3 10.7-24 24-24s24 10.7 24 24l0 64 64 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-64 0 0 64c0 13.3-10.7 24-24 24s-24-10.7-24-24z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <div
              class="questionEditorContainer"
            >
              <div
                class="section"
              >
                <div
                  class="questionFieldContainer layoutHalf"
                >
                  <div
                    class="label"
                  >
                    <span>
                      Type
                    </span>
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="selectInputContainer selectInputKindPrimary"
                      >
                        <select
                          data-testid="test-question-type-select-select"
                          id="question-type-select"
                          name="question-type-select"
                        >
                          <option
                            value="MULTI_CHOICE"
                          >
                            Multi Choice
                          </option>
                          <option
                            value="RANGE"
                          >
                            Range
                          </option>
                          <option
                            value="TRUE_FALSE"
                          >
                            True or False
                          </option>
                          <option
                            value="TYPE_ANSWER"
                          >
                            Type Answer
                          </option>
                          <option
                            value="PIN"
                          >
                            Pin
                          </option>
                          <option
                            value="PUZZLE"
                          >
                            Puzzle
                          </option>
                        </select>
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-chevron-down selectIcon"
                          color="black"
                          data-icon="chevron-down"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="section"
              >
                <div
                  class="questionFieldContainer layoutFull"
                >
                  <div
                    class="label"
                  >
                    <span>
                      Question
                    </span>
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="textFieldInputContainer textFieldInputKindPrimary"
                      >
                        <input
                          class="textfield"
                          data-testid="test-question-text-textfield-textfield"
                          id="question-text-textfield"
                          maxlength="120"
                          minlength="3"
                          name="question-text-textfield"
                          placeholder="Question"
                          type="text"
                          value="Who painted The Starry Night?"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="section"
              >
                <div
                  class="questionFieldContainer layoutFull"
                >
                  <div
                    class="label"
                  />
                  <div
                    class="content"
                  >
                    <div
                      class="mediaQuestionField"
                    >
                      <div
                        class="previewWrapper"
                      >
                        <div
                          class="preview"
                        >
                          <div
                            class="container"
                          >
                            <div
                              class="centerOverlay"
                            >
                              <div
                                class="loadingSpinnerContainer"
                              >
                                <div />
                                <div />
                                <div />
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="actions"
                        >
                          <div
                            class="buttonInputContainer buttonInputKindDestructive buttonInputSizeSmall"
                          >
                            <button
                              data-testid="test-delete-media-button-button"
                              id="delete-media-button"
                              name="delete-media-button"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="svg-inline--fa fa-trash"
                                data-icon="trash"
                                data-prefix="fas"
                                role="img"
                                viewBox="0 0 448 512"
                              >
                                <path
                                  d="M136.7 5.9L128 32 32 32C14.3 32 0 46.3 0 64S14.3 96 32 96l384 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-96 0-8.7-26.1C306.9-7.2 294.7-16 280.9-16L167.1-16c-13.8 0-26 8.8-30.4 21.9zM416 144L32 144 53.1 467.1C54.7 492.4 75.7 512 101 512L347 512c25.3 0 46.3-19.6 47.9-44.9L416 144z"
                                  fill="currentColor"
                                />
                              </svg>
                              <span>
                                Delete
                              </span>
                            </button>
                          </div>
                          <div
                            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
                          >
                            <button
                              data-testid="test-add-media-button-button"
                              id="add-media-button"
                              name="add-media-button"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="svg-inline--fa fa-retweet"
                                data-icon="retweet"
                                data-prefix="fas"
                                role="img"
                                viewBox="0 0 576 512"
                              >
                                <path
                                  d="M118.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-64 64c-9.2 9.2-11.9 22.9-6.9 34.9S19.1 160 32 160l32 0 0 224c0 53 43 96 96 96l128 0c17.7 0 32-14.3 32-32s-14.3-32-32-32l-128 0c-17.7 0-32-14.3-32-32l0-224 32 0c12.9 0 24.6-7.8 29.6-19.8s2.2-25.7-6.9-34.9l-64-64zM457.4 470.6c12.5 12.5 32.8 12.5 45.3 0l64-64c9.2-9.2 11.9-22.9 6.9-34.9S556.9 352 544 352l-32 0 0-224c0-53-43-96-96-96L288 32c-17.7 0-32 14.3-32 32s14.3 32 32 32l128 0c17.7 0 32 14.3 32 32l0 224-32 0c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l64 64z"
                                  fill="currentColor"
                                />
                              </svg>
                              <span>
                                Replace
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="section"
              >
                <div
                  class="questionFieldContainer layoutFull"
                >
                  <div
                    class="label"
                  >
                    <span>
                      Options
                    </span>
                    <button
                      class="iconTooltipButton"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-circle-info"
                        data-icon="circle-info"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 512 512"
                      >
                        <path
                          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="optionsContainer"
                    >
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-0-textfield-textfield"
                              id="multi-choice-option-0-textfield"
                              name="multi-choice-option-0-textfield"
                              placeholder="Option 1"
                              type="text"
                              value="Vincent van Gogh"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-0-textfield-checkbox"
                            >
                              <input
                                checked=""
                                class="checkbox"
                                id="multi-choice-option-0-textfield-checkbox"
                                type="checkbox"
                              />
                              <span
                                class="checkboxIcon"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="svg-inline--fa fa-check"
                                  data-icon="check"
                                  data-prefix="fas"
                                  role="img"
                                  viewBox="0 0 448 512"
                                >
                                  <path
                                    d="M434.8 70.1c14.3 10.4 17.5 30.4 7.1 44.7l-256 352c-5.5 7.6-14 12.3-23.4 13.1s-18.5-2.7-25.1-9.3l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l101.5 101.5 234-321.7c10.4-14.3 30.4-17.5 44.7-7.1z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-1-textfield-textfield"
                              id="multi-choice-option-1-textfield"
                              name="multi-choice-option-1-textfield"
                              placeholder="Option 2"
                              type="text"
                              value="Pablo Picasso"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-1-textfield-checkbox"
                            >
                              <input
                                class="checkbox"
                                id="multi-choice-option-1-textfield-checkbox"
                                type="checkbox"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-2-textfield-textfield"
                              id="multi-choice-option-2-textfield"
                              name="multi-choice-option-2-textfield"
                              placeholder="Option 3"
                              type="text"
                              value="Leonardo da Vinci"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-2-textfield-checkbox"
                            >
                              <input
                                class="checkbox"
                                id="multi-choice-option-2-textfield-checkbox"
                                type="checkbox"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-3-textfield-textfield"
                              id="multi-choice-option-3-textfield"
                              name="multi-choice-option-3-textfield"
                              placeholder="Option 4"
                              type="text"
                              value="Claude Monet"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-3-textfield-checkbox"
                            >
                              <input
                                class="checkbox"
                                id="multi-choice-option-3-textfield-checkbox"
                                type="checkbox"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-4-textfield-textfield"
                              id="multi-choice-option-4-textfield"
                              name="multi-choice-option-4-textfield"
                              placeholder="Option 5"
                              type="text"
                              value="Michelangelo"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-4-textfield-checkbox"
                            >
                              <input
                                class="checkbox"
                                id="multi-choice-option-4-textfield-checkbox"
                                type="checkbox"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                      <div
                        class="option"
                      >
                        <div
                          class="inputContainer"
                        >
                          <div
                            class="textFieldInputContainer textFieldInputKindPrimary"
                          >
                            <input
                              class="textfield"
                              data-testid="test-multi-choice-option-5-textfield-textfield"
                              id="multi-choice-option-5-textfield"
                              name="multi-choice-option-5-textfield"
                              placeholder="Option 6"
                              type="text"
                              value="Rembrandt"
                            />
                            <label
                              class="checkboxLabel"
                              for="multi-choice-option-5-textfield-checkbox"
                            >
                              <input
                                class="checkbox"
                                id="multi-choice-option-5-textfield-checkbox"
                                type="checkbox"
                              />
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="section"
              >
                <div
                  class="questionFieldContainer layoutHalf"
                >
                  <div
                    class="label"
                  >
                    <span>
                      Points
                    </span>
                    <button
                      class="iconTooltipButton"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-circle-info"
                        data-icon="circle-info"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 512 512"
                      >
                        <path
                          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="selectInputContainer selectInputKindPrimary"
                      >
                        <select
                          data-testid="test-points-select-select"
                          id="points-select"
                          name="points-select"
                        >
                          <option
                            value="0"
                          >
                            Zero Points
                          </option>
                          <option
                            value="1000"
                          >
                            Standard Points (1000)
                          </option>
                          <option
                            value="2000"
                          >
                            Double Points (2000)
                          </option>
                        </select>
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-chevron-down selectIcon"
                          color="black"
                          data-icon="chevron-down"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="questionFieldContainer layoutHalf"
                >
                  <div
                    class="label"
                  >
                    <span>
                      Time Limit
                    </span>
                    <button
                      class="iconTooltipButton"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-circle-info"
                        data-icon="circle-info"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 512 512"
                      >
                        <path
                          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
                          fill="currentColor"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="content"
                  >
                    <div
                      class="inputContainer"
                    >
                      <div
                        class="selectInputContainer selectInputKindPrimary"
                      >
                        <select
                          data-testid="test-duration-select-select"
                          id="duration-select"
                          name="duration-select"
                        >
                          <option
                            value="5"
                          >
                            5 seconds
                          </option>
                          <option
                            value="10"
                          >
                            10 seconds
                          </option>
                          <option
                            value="20"
                          >
                            20 seconds
                          </option>
                          <option
                            value="30"
                          >
                            30 seconds
                          </option>
                          <option
                            value="45"
                          >
                            45 seconds
                          </option>
                          <option
                            value="60"
                          >
                            1 minute
                          </option>
                          <option
                            value="90"
                          >
                            1 minute 30 seconds
                          </option>
                          <option
                            value="120"
                          >
                            2 minutes
                          </option>
                          <option
                            value="180"
                          >
                            3 minutes
                          </option>
                          <option
                            value="240"
                          >
                            4 minutes
                          </option>
                        </select>
                        <svg
                          aria-hidden="true"
                          class="svg-inline--fa fa-chevron-down selectIcon"
                          color="black"
                          data-icon="chevron-down"
                          data-prefix="fas"
                          role="img"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M201.4 406.6c12.5 12.5 32.8 12.5 45.3 0l192-192c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 338.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l192 192z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="editorToggleSection"
            >
              <div
                class="divider"
              />
              <div
                class="toggleButtonWrapper"
              >
                <div
                  class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
                >
                  <button
                    data-testid="test-toggle-editor-button-button"
                    id="toggle-editor-button"
                    name="toggle-editor-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-code"
                      data-icon="code"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                    >
                      <path
                        d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Show Advanced Editor
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuizCreatorPageUI > renders QuizCreatorPageUI for classic mode without questions 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <div
          class="quizCreatorPageHeader"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindSecondary small error"
            >
              <input
                class="textfield"
                data-testid="test-quiz-title-textfield-textfield"
                id="quiz-title-textfield"
                maxlength="95"
                minlength="3"
                name="quiz-title-textfield"
                placeholder="Title"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
          >
            <button
              data-testid="test-settings-button-button"
              id="settings-button"
              name="settings-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gear"
                data-icon="gear"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Settings
              </span>
            </button>
          </div>
          <div
            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
          >
            <button
              data-testid="test-save-button-button"
              disabled=""
              id="save-button"
              name="save-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-floppy-disk"
                data-icon="floppy-disk"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm32 96c0-17.7 14.3-32 32-32l160 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="quizCreatorPage"
          >
            <div
              class="editorToggleSection"
            >
              <div
                class="divider"
              />
              <div
                class="toggleButtonWrapper"
              >
                <div
                  class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
                >
                  <button
                    data-testid="test-toggle-editor-button-button"
                    id="toggle-editor-button"
                    name="toggle-editor-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-code"
                      data-icon="code"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                    >
                      <path
                        d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Show Advanced Editor
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuizCreatorPageUI > renders QuizCreatorPageUI for zero to one hundred mode 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <div
          class="quizCreatorPageHeader"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindSecondary small error"
            >
              <input
                class="textfield"
                data-testid="test-quiz-title-textfield-textfield"
                id="quiz-title-textfield"
                maxlength="95"
                minlength="3"
                name="quiz-title-textfield"
                placeholder="Title"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
          >
            <button
              data-testid="test-settings-button-button"
              id="settings-button"
              name="settings-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gear"
                data-icon="gear"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Settings
              </span>
            </button>
          </div>
          <div
            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
          >
            <button
              data-testid="test-save-button-button"
              disabled=""
              id="save-button"
              name="save-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-floppy-disk"
                data-icon="floppy-disk"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm32 96c0-17.7 14.3-32 32-32l160 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="quizCreatorPage"
          >
            <div
              class="editorToggleSection"
            >
              <div
                class="divider"
              />
              <div
                class="toggleButtonWrapper"
              >
                <div
                  class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
                >
                  <button
                    data-testid="test-toggle-editor-button-button"
                    id="toggle-editor-button"
                    name="toggle-editor-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-code"
                      data-icon="code"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                    >
                      <path
                        d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Show Advanced Editor
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuizCreatorPageUI > renders QuizCreatorPageUI for zero to one hundred mode without questions 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <div
          class="quizCreatorPageHeader"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindSecondary small error"
            >
              <input
                class="textfield"
                data-testid="test-quiz-title-textfield-textfield"
                id="quiz-title-textfield"
                maxlength="95"
                minlength="3"
                name="quiz-title-textfield"
                placeholder="Title"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
          >
            <button
              data-testid="test-settings-button-button"
              id="settings-button"
              name="settings-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gear"
                data-icon="gear"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Settings
              </span>
            </button>
          </div>
          <div
            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
          >
            <button
              data-testid="test-save-button-button"
              disabled=""
              id="save-button"
              name="save-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-floppy-disk"
                data-icon="floppy-disk"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm32 96c0-17.7 14.3-32 32-32l160 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="quizCreatorPage"
          >
            <div
              class="editorToggleSection"
            >
              <div
                class="divider"
              />
              <div
                class="toggleButtonWrapper"
              >
                <div
                  class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
                >
                  <button
                    data-testid="test-toggle-editor-button-button"
                    id="toggle-editor-button"
                    name="toggle-editor-button"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-code"
                      data-icon="code"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                    >
                      <path
                        d="M360.8 1.2c-17-4.9-34.7 5-39.6 22l-128 448c-4.9 17 5 34.7 22 39.6s34.7-5 39.6-22l128-448c4.9-17-5-34.7-22-39.6zm64.6 136.1c-12.5 12.5-12.5 32.8 0 45.3l73.4 73.4-73.4 73.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0zm-274.7 0c-12.5-12.5-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L77.3 256 150.6 182.6c12.5-12.5 12.5-32.8 0-45.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Show Advanced Editor
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`QuizCreatorPageUI > renders QuizCreatorPageUI without mdoe 1`] = `
<div>
  <div
    class="main"
  >
    <div
      aria-hidden="true"
      class="header"
      data-floating-ui-inert=""
    >
      <button
        class="logo"
      >
        <img
          alt="Klurigo"
          class="icon"
          src="/src/assets/images/klurigo-icon.svg"
        />
        <span
          class="text"
        >
          Klurigo
        </span>
      </button>
      <div
        class="side"
      >
        <a
          data-discover="true"
          href="/auth/login"
        >
          Login
        </a>
        <div
          class="quizCreatorPageHeader"
        >
          <div
            class="inputContainer"
          >
            <div
              class="textFieldInputContainer textFieldInputKindSecondary small error"
            >
              <input
                class="textfield"
                data-testid="test-quiz-title-textfield-textfield"
                id="quiz-title-textfield"
                maxlength="95"
                minlength="3"
                name="quiz-title-textfield"
                placeholder="Title"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="buttonInputContainer buttonInputKindPrimary buttonInputSizeSmall"
          >
            <button
              data-testid="test-settings-button-button"
              id="settings-button"
              name="settings-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-gear"
                data-icon="gear"
                data-prefix="fas"
                role="img"
                viewBox="0 0 512 512"
              >
                <path
                  d="M195.1 9.5C198.1-5.3 211.2-16 226.4-16l59.8 0c15.2 0 28.3 10.7 31.3 25.5L332 79.5c14.1 6 27.3 13.7 39.3 22.8l67.8-22.5c14.4-4.8 30.2 1.2 37.8 14.4l29.9 51.8c7.6 13.2 4.9 29.8-6.5 39.9L447 233.3c.9 7.4 1.3 15 1.3 22.7s-.5 15.3-1.3 22.7l53.4 47.5c11.4 10.1 14 26.8 6.5 39.9l-29.9 51.8c-7.6 13.1-23.4 19.2-37.8 14.4l-67.8-22.5c-12.1 9.1-25.3 16.7-39.3 22.8l-14.4 69.9c-3.1 14.9-16.2 25.5-31.3 25.5l-59.8 0c-15.2 0-28.3-10.7-31.3-25.5l-14.4-69.9c-14.1-6-27.2-13.7-39.3-22.8L73.5 432.3c-14.4 4.8-30.2-1.2-37.8-14.4L5.8 366.1c-7.6-13.2-4.9-29.8 6.5-39.9l53.4-47.5c-.9-7.4-1.3-15-1.3-22.7s.5-15.3 1.3-22.7L12.3 185.8c-11.4-10.1-14-26.8-6.5-39.9L35.7 94.1c7.6-13.2 23.4-19.2 37.8-14.4l67.8 22.5c12.1-9.1 25.3-16.7 39.3-22.8L195.1 9.5zM256.3 336a80 80 0 1 0 -.6-160 80 80 0 1 0 .6 160z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Settings
              </span>
            </button>
          </div>
          <div
            class="buttonInputContainer buttonInputKindCallToAction buttonInputSizeSmall"
          >
            <button
              data-testid="test-save-button-button"
              disabled=""
              id="save-button"
              name="save-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-floppy-disk"
                data-icon="floppy-disk"
                data-prefix="fas"
                role="img"
                viewBox="0 0 448 512"
              >
                <path
                  d="M64 32C28.7 32 0 60.7 0 96L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-242.7c0-17-6.7-33.3-18.7-45.3L352 50.7C340 38.7 323.7 32 306.7 32L64 32zm32 96c0-17.7 14.3-32 32-32l160 0c17.7 0 32 14.3 32 32l0 64c0 17.7-14.3 32-32 32l-160 0c-17.7 0-32-14.3-32-32l0-64zM224 288a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"
                  fill="currentColor"
                />
              </svg>
              <span>
                Save
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="content fullHeight centerAlign"
    >
      <div
        class="contentWrapper fullWidth"
      >
        <div
          class="contentInner"
        >
          <div
            class="quizCreatorPage"
          >
            <div
              class="floatingOverlay"
              style="position: fixed; overflow: auto; top: 0px; right: 0px; bottom: 0px; left: 0px;"
            >
              <span
                data-floating-ui-focus-guard=""
                data-type="inside"
                role="button"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
                tabindex="0"
              />
              <div
                aria-labelledby="«r6»"
                class="modalContainer sizeNormal"
                data-floating-ui-focusable=""
                id="«r4»"
                role="dialog"
                tabindex="-1"
              >
                <div
                  class="header"
                >
                  <div
                    class="title"
                    id="«r6»"
                  >
                    Choose Your Game Mode
                  </div>
                </div>
                <div
                  class="content"
                >
                  Choose the game mode for your quiz. Each mode offers a unique way for participants to play and enjoy!
                  <div
                    class="gameModeSelectionModalWrapper"
                  >
                    <button
                      class="classic"
                    >
                      Classic Mode
                      <div
                        class="description"
                      >
                        Create a traditional quiz with a mix of question types, including multiple-choice, true/false, range sliders, and typed answers.
                      </div>
                    </button>
                    <button
                      class="zeroToOneHundred"
                    >
                      0-100 Mode
                      <div
                        class="description"
                      >
                        Design a quiz with slider-based questions, where all answers range between 0 and 100.
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <span
                data-floating-ui-focus-guard=""
                data-type="inside"
                role="button"
                style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: fixed; white-space: nowrap; width: 1px; top: 0px; left: 0px;"
                tabindex="0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
